--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "http://timeclot.github.io/bananglish",
   "name": "bananglish-handbook",
   "version": "1.0.0",
   "private": false,
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "gulp deploy",
     "build": "gulp build",
     "start": "gulp start"
   },
